# omega-srep

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  help.txt
.github/workflows/: ci.yml
Compression/: Common.cpp  Common.h
Compression/LZMA2/C/: Threads.c  Threads.h  ThreadsWin32.c  ThreadsWin32.h
Compression/LZMA2/MultiThreading/: Synchronization.h
Compression/SREP/: compress_cdc.cpp  dedup.cpp  dup_wrapper.cpp  hash_table.cpp  hashes.cpp  io.cpp  srep.cpp
Compression/_Encryption/hashes/vmac/: vmac.c
Compression/_Encryption/headers/: tomcrypt_macros.h
completions/: _osrep  osrep.bash
docs/: 32bit-support.md  dup-bench-256.md  dup-bench-512.md  dup-bench.md  dup-mode-design.md  format-spec.md  msvc-build.md  multi-corpus-bench.md  research-notes.md  review-call-for-feedback.md  sanitizer-runs.md  upstream-comparison.md  windows-build.md
man/: osrep.1
tests/: _winpath.sh  cdc_hash_compare.py  dedup_test.cpp  dedup_xtest.sh  dup_bench.sh  dup_concurrency.sh  dup_corruption_fuzz.sh  dup_gear_hash_test.sh  dup_hash_swap_test.sh  dup_native_roundtrip.sh  dup_prototype.py  dup_realworld.sh  dup_roundtrip.sh  fuzz.sh  fuzz_decode.cc  fuzz_decode_streaming.cc  fuzz_encode_split.cc  fuzz_regression.sh  gen_corpus.sh  local_hardening.sh  measure.py  multi_corpus_bench.sh  pgo_train.sh  pgo_train_windows_vm.sh  profile.sh  roundtrip.sh  segment_match_loss.py
tests/fuzz-regression/: bad_alloc_chunk_count_uint64_max
